Attempt to fix alignment 2

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,14 +19,6 @@ h1{
     font-family: 'Times New Roman', Times, serif;
     font-size: 40px;
 }
-h2{
-    background-color: lavender;
-    color: rgb(128, 92, 136);
-    text-align: left;
-    margin-left: 40px;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
-}
 p{
     background-color: lavender;
     color: rgb(128, 92, 136);
